--- a/_data/projects/hekate.yaml
+++ b/_data/projects/hekate.yaml
@@ -1,5 +1,5 @@
 name: Hekate
-description: Functional Graphs for F#
+description: Graphs for F#
 artefacts:
   github: https://xyncro.github.com/hekate
   nuget: https://www.nuget.org/packages/hekate
