--- a/_config.yml
+++ b/_config.yml
@@ -20,3 +20,10 @@ defaults:
       path: ""
     values:
       layout: default
+
+# External
+
+twitter:
+  name: xyncro/tech
+  handle: "@xyncro_tech"
+  url: https://twitter.com/xyncro_tech
