some experimental content

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -24,6 +24,8 @@ chiron:
   sections:
     updates:
       name: Updates
+    reference:
+      name: Reference
     packages:
       name: Packages
     source:
