updated to jekyll 3, code highlighting, etc.

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,14 @@
 # Build
 
 encoding: utf-8
-highlighter: pygments
+highlighter: rouge
 markdown: kramdown
-permalink: pretty
+kramdown:
+  input: GFM
+  auto_ids: true
+  syntax_highlighter: rouge
+
+# permalink: pretty
 
 # Collections
 
