--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,8 @@ collections:
     output: true
   chiron:
     output: true
+  freya:
+    output: true
   hekate:
     output: true
   hephaestus:
